--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "Dan Ward",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.13.0",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.3.0",
-    "gulp-connect": "^4.0.0",
     "gulp-sass": "^2.3.1"
   },
   "dependencies": {
